// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. general tests: media queries - {"fontSize":24,"margin":12,"@media (max-width: 641px)":{"fontSize":20,"margin":10}} 1`] = `
.glamor-0 {
  font-size: 24px;
}

.glamor-1 {
  margin: 12px;
}

@media (max-width: 641px) {
  .glamor-2 {
    font-size: 20px;
  }
}

@media (max-width: 641px) {
  .glamor-3 {
    margin: 10px;
  }
}

<div
  className="glamor-0 glamor-1 glamor-2 glamor-3"
/>
`;

exports[`2. general tests: pseudo elements - {"& button":{"color":"green"}} 1`] = `
.glamor-0 & button {
  color: green;
}

<div
  className="glamor-0"
/>
`;

exports[`3. general tests: pseudo states - {":hover":{"backgroundColor":"blue"}} 1`] = `
.glamor-0:hover {
  background-color: blue;
}

<div
  className="glamor-0"
/>
`;

exports[`doesn't mess up stuff that does't have styles 1`] = `<div />`;

exports[`enzyme.mount 1`] = `
.glamor-3 {
  padding: 4em;
}

.glamor-4 {
  background: papayawhip;
}

.glamor-0 {
  font-size: 1.5em;
}

.glamor-1 {
  text-align: center;
}

.glamor-2 {
  color: palevioletred;
}

<Wrapper>
  <section
    className="glamor-3 glamor-4"
  >
    <Title>
      <h1
        className="glamor-0 glamor-1 glamor-2"
      >
        Hello World, this is my first glamor styled component!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`enzyme.render 1`] = `
.glamor-3 {
  padding: 4em;
}

.glamor-4 {
  background: papayawhip;
}

.glamor-0 {
  font-size: 1.5em;
}

.glamor-1 {
  text-align: center;
}

.glamor-2 {
  color: palevioletred;
}

<section
  class="glamor-3 glamor-4"
>
  <h1
    class="glamor-0 glamor-1 glamor-2"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`enzyme.shallow 1`] = `
.glamor-0 {
  padding: 4em;
}

.glamor-1 {
  background: papayawhip;
}

<section
  className="glamor-0 glamor-1"
>
  <Title>
    Hello World, this is my first glamor styled component!
  </Title>
</section>
`;

exports[`react-test-renderer 1`] = `
.glamor-3 {
  padding: 4em;
}

.glamor-4 {
  background: papayawhip;
}

.glamor-0 {
  font-size: 1.5em;
}

.glamor-1 {
  text-align: center;
}

.glamor-2 {
  color: palevioletred;
}

<section
  className="glamor-3 glamor-4"
>
  <h1
    className="glamor-0 glamor-1 glamor-2"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`works when the root element does not have styles 1`] = `
.glamor-0 {
  padding: 4em;
}

.glamor-1 {
  background: papayawhip;
}

<div>
  <section
    className="glamor-0 glamor-1"
  />
</div>
`;
